<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gasto_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcosmtz.littlepig.GastoAdd">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="@string/add_ingreso_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="0.00"
                android:layout_marginTop="@dimen/text_margin"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:text="@string/add_ingreso_name_in"
                android:ems="10"
                android:id="@+id/editTextExpenseName"
                android:textColor="@color/colorText"


                />

            <TextView
                android:text="@string/add_valor_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="0.00"
                android:layout_marginTop="@dimen/margin_first_element"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/add_valor_in"
                android:ems="10"
                android:id="@+id/editTextExpenseValue"
                android:layout_weight="0.00"
                android:textColor="@color/colorText"
                />

            <TextView
                android:text="@string/add_descrip_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="0.00"
                android:layout_marginTop="@dimen/margin_first_element"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:text="@string/add_descrip_in"
                android:id="@+id/editTextExpenseDescription"
                android:layout_weight="0.00"
                android:textColor="@color/colorText"
                android:textAlignment="gravity"
                />


            <TextView
                android:text="@string/add_tipo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="0.00"
                android:layout_marginTop="@dimen/margin_first_element"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton
                    android:text="@string/add_tipo_fijo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonExpenseFijo"
                    android:layout_weight="1"
                    android:layout_marginRight="80dp"
                    android:textColor="@color/colorText"
                    android:textSize="18dp"
                    />

                <RadioButton
                    android:text="@string/add_tipo_var"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonExpenseVariable"
                    android:layout_weight="1"
                    android:textColor="@color/colorText"
                    android:textSize="18dp"/>
            </RadioGroup>

            <!--Si es fijo hay que agregar cada cuando
            se repite el gasto-->

            <Button
                android:text="@string/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddExpense"
                android:layout_weight="0.00"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_first_element"
                android:background="@color/colorButton"
                android:textColor="@color/colorTextButton"
                android:textSize="10pt"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
