<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_agrega_meta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcosmtz.littlepig.AgregaMeta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="@string/tittle_meta_add"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:text="@string/meta_add_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="0.00"
                android:layout_marginTop="@dimen/margin_first_element"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:text="@string/meta_add_in_name"
                android:ems="10"
                android:id="@+id/input_meta_name"
                android:textColor="@color/colorText"


                />

            <TextView
                android:text="@string/meta_add_text_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="0.00"
                android:layout_marginTop="@dimen/margin_first_element"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/meta_add_in_valor"
                android:ems="10"
                android:id="@+id/input_meta_costo"
                android:layout_weight="0.00"
                android:textColor="@color/colorText"
                />

            <TextView
                android:text="@string/meta_add_text_tiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="0.00"
                android:layout_marginTop="@dimen/margin_first_element"
                android:textColor="@color/colorTitles"
                android:textSize="@dimen/title_text_size"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/meta_add_in_tiempo"
                android:ems="10"
                android:id="@+id/input_meta_tiempo"
                android:layout_weight="0.00"
                android:textColor="@color/colorText"
                />

            <Button
                android:text="@string/btn_comen_ya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_agrega_meta"
                android:layout_weight="0.00"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_first_element"
                android:background="@color/colorButton"
                android:textColor="@color/colorTextButton"
                android:textSize="10pt"
                />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
