<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_teoria_ahorro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcosmtz.littlepig.TeoriaAhorro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clipToPadding="false"
        android:fillViewport="false">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
             <TextView
                 android:id="@+id/title_leccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/text_margin"
                 android:text="@string/tittle_ahorro"
                 android:textColor="@color/colorTitles"
                 android:textSize="@dimen/title_text_size"
                 />

             <TextView
                 android:id="@+id/txt_leccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
                 android:text="@string/text_leccion_ahorro"
                 android:textColor="@color/colorText"
                 android:textSize="@dimen/tex_size"
                 />

             <Button
                 android:id="@+id/btn_ahorro_siguiente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txt_leccion"
                 android:background="@color/colorButton"
                 android:text="@string/btn_siguiente"
                 android:textColor="@color/colorTextButton"
                 android:textSize="@dimen/button_text_size"
                 />

         </LinearLayout>
    </ScrollView>
</RelativeLayout>
