<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tips_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcosmtz.littlepig.TipsView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="Actualmente:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorTitles"
                android:layout_marginTop="@dimen/text_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:text="@string/text_revisa"/>

            <TextView
                android:text="Considera:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorTitles"
                android:layout_marginTop="@dimen/margin_first_element"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tip1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_element"
                    android:text="Tip de Little Pig"
                    android:textSize="@dimen/title_text_size"
                    />

                <TextView
                    android:id="@+id/tip2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_element"
                    android:text="Tip de Little Pig"
                    android:textSize="@dimen/title_text_size"
                    />
                <TextView
                    android:id="@+id/tip3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_element"
                    android:text="Tip de Little Pig"
                    android:textSize="@dimen/title_text_size"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextButton"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/margin_first_element"
                    android:text="@string/btn_ajusta"
                    android:textSize="@dimen/button_text_size"
                    android:id="@+id/btn_ajustar" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_tips_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextButton"
                android:background="@color/colorButton"
                android:layout_marginTop="@dimen/margin_element"
                android:text="@string/btn_menu"
                android:textSize="@dimen/button_text_size"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
